examples/test/testpolicy13478.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13478
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key45: value27
      key25: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value5
          key33: value18
      podSelector:
        matchLabels:
          key24: value31
          key22: value48
